Bug 331034 - regression: can't block select in the Alternate buffer after apps indicate they are interested in mouse tracking events
Summary: regression: can't block select in the Alternate buffer after apps indicate th...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 344064 361233 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-12 07:01 UTC by richlv
Modified: 2018-06-06 11:51 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.08
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description richlv 2014-02-12 07:01:29 UTC
this is a regression - it worked before.

if midnight commander is started in konsole and file listing is visible, in previous versions it was possible to block select listed files.

i seem to recall that ctrl+shift+alt did the job.

now no combination seems to work anymore

Reproducible: Always
Comment 1 Christoph Feck 2014-02-12 11:34:41 UTC
Could you be more specific which update broke it?
Comment 2 richlv 2014-02-12 11:44:00 UTC
unfortunately, i don't know exact versions - the one in opensuse 12.3 worked, but that's quite a lot of versions inbetween, i guess
Comment 3 Kurt Hindenburg 2014-02-13 19:46:22 UTC
Konsole 2.10.x - Ctrl+Shift+drag will select text.
Comment 4 Travis Evans 2014-06-08 01:41:24 UTC
Normally, Ctrl+Alt will do block selection for me, but not in mouse-enabled apps. I can press Shift to select text in Konsole, but not block select. Presumably, in a mouse-using/ncurses app, one should be able to press Ctrl+Alt+Shift to block select in Konsole, since Shift is used to select and Ctrl+Alt is used to block select in a non-mouse app. This doesn't work for me in KDE 4.12.4. Perhaps this is what the OR is reporting?
Comment 5 Christoph Feck 2014-07-21 20:52:49 UTC
Beware of the order pressing the modifiers.

When I press them in the order Shift+Ctrl+Alt or Ctrl+Shift+Alt, then applications actually see Meta+Ctrl+Shift. I have to use Alt before Shift, e.g. Ctrl+Alt+Shift or Alt+Shift+Ctrl to actually get Ctrl+Alt+Shift delivered.

Might be an X11 thing.
Comment 6 Christoph Feck 2014-07-21 20:54:59 UTC
That reminds me that we have several bug reports about shortcuts mentioning Ctrl+Alt+Shift...
Comment 7 Ahmad Samir 2018-06-05 09:55:02 UTC
*** Bug 344064 has been marked as a duplicate of this bug. ***
Comment 8 Ahmad Samir 2018-06-05 09:55:09 UTC
*** Bug 361233 has been marked as a duplicate of this bug. ***
Comment 9 Kurt Hindenburg 2018-06-06 11:51:09 UTC
Git commit f9a26694865af3231d5f92293701326478d8ea7b by Kurt Hindenburg, on behalf of Ahmad Samir.
Committed on 06/06/2018 at 11:50.
Pushed by hindenburg into branch 'master'.

Fix block selection mode in a couple of cases

Summary:
Make it possible to extend the selection when selecting text in
column/block mode, by holding down Alt+Ctrl+Shift.

Commit e5b7480966f3121f4e1042648e29a74b9c29b2e9 disabled text selection
in apps running on the Alternate screen buffer, when they tell the
terminal they're interested in Mouse Tracking events, unless only the Shift
key is pressed; this accidentally prevented block selection mode from
working in that case. Tweak the condition, to also allow block selection
mode to work when Shift is pressed. Note that the selection can't be
extended in programs while Mouse Tracking events are enabled.
FIXED-IN: 18.08

Test Plan:
- Open a new tab and `cat` some file to have some text on the screen:
 a - Select text with no modifier keys pressed
 b - Select some text, press and hold Shift and extend the selection
 c - Press and hold Alt+Ctrl, to select text in block mode, and while
     still pressing Alt+Ctrl, press Shift and extend the selection in
     block mode

- Open some file in vim, with normal mode `:set mouse=`, and repeat a, b, c
- Switch to visual mode in vim `:set mouse=a`:
 - Hold down Shift and select text
 - Hold down Shift+Alt+Ctrl and select text in column mode
 - Note that extending the selection doesn't work in vim visual mode
   (i.e. after the app indicates it's interested in Mouse Tracking events)

Reviewers: #konsole, hindenburg

Reviewed By: #konsole, hindenburg

Subscribers: hindenburg, anthonyfieroni, konsole-devel, #konsole

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D13356

M  +17   -13   src/TerminalDisplay.cpp

https://commits.kde.org/konsole/f9a26694865af3231d5f92293701326478d8ea7b